syntax = "proto2";

package barcode_exporter;

option java_package = "pl.lamvak.barcodeexporter.proto";
option java_outer_classname = "BarcodeExporterProtos";

message Barcode {
    required string code = 1;
    message Rectangle {
        required int64 top = 1;
        required int64 left = 2;
        required int64 bottom = 3;
        required int64 right = 4;
    }
    required Rectangle box = 2;
    required string source_image_ref = 3;
    required int64 creation_timestamp = 4;
}
